--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@ant-design/plots": "^1.2.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,12 +14,17 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "antd": "^5.6.3",
+    "csv-writer": "^1.6.0",
+    "dayjs": "^1.11.9",
     "firebase": "^10.1.0",
+    "moment": "^2.29.4",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "rechart": "^0.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/papaparse": "^5.3.7"
   }
 }
